# Games-From-Scratch

./: CMakeLists.txt
includes/GameIncludes/: GameConfig.h
src/: main.cpp
